Use diamonds
- Use final
- Remove redundant parentheses
- No need to nest
- Use valueOf()
- Use multi-catch